[gd_scene load_steps=10 format=3 uid="uid://b5rtgd83xdoyk"]

[ext_resource type="Script" path="res://scripts/grass_to_snow.gd" id="1_ohacx"]
[ext_resource type="TileSet" uid="uid://dyrq7h5i02yyh" path="res://scenes/grass_snow_tileset.tres" id="2_107ju"]
[ext_resource type="PackedScene" uid="uid://digw6jgcbqt8l" path="res://scenes/player.tscn" id="3_skscc"]
[ext_resource type="PackedScene" uid="uid://c8x0rcllec7w5" path="res://scenes/canvas_modulate.tscn" id="4_buiv0"]
[ext_resource type="PackedScene" uid="uid://b4mitotcubsj0" path="res://scenes/daynightcycle_ui.tscn" id="5_gl88k"]
[ext_resource type="PackedScene" uid="uid://dt5avhnd2ms2x" path="res://inventory/hotbar.tscn" id="5_pwclt"]
[ext_resource type="PackedScene" uid="uid://b0xxs5xfedjw4" path="res://scenes/nightborne.tscn" id="7_ou7wi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xir27"]
size = Vector2(48, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ui7n"]
size = Vector2(37.5, 34)

[node name="grass to snow" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ohacx")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_107ju")
format = 2
layer_0/name = "general terrain"
layer_0/tile_data = PackedInt32Array(0, 0, 4, 1, 0, 4, 2, 0, 4, 3, 0, 4, 4, 0, 4, 5, 0, 4, 6, 0, 4, 7, 0, 4, 8, 0, 4, 9, 0, 4, 10, 0, 4, 11, 1, 4, 12, 720897, 7, 13, 720897, 7, 14, 720897, 7, 15, 720897, 7, 16, 720897, 7, 17, 720897, 7, 18, 720897, 7, 19, 720897, 7, 20, 720897, 7, 21, 720897, 7, 22, 720897, 7, 23, 720897, 7, 24, 720897, 7, 25, 720897, 7, 26, 720897, 7, 27, 720897, 7, 28, 720897, 7, 29, 720897, 7, 65536, 0, 4, 131072, 0, 4, 196608, 0, 4, 262144, 0, 4, 327680, 0, 4, 393216, 0, 4, 458752, 0, 4, 524288, 0, 4, 589824, 0, 4, 655360, 262145, 4, 786432, 0, 4, 851968, 0, 4, 917504, 0, 4, 983040, 0, 4, 1048576, 0, 4, 1048577, 0, 4, 1048578, 0, 4, 1048579, 0, 4, 1114112, 0, 4, 1114113, 0, 4, 1114114, 0, 4, 1114115, 0, 4, 1114116, 0, 4, 1114117, 0, 4, 1114118, 0, 4, 1114119, 0, 4, 1114120, 0, 4, 1114121, 0, 4, 1114122, 0, 4, 1114123, 0, 4, 1114124, 0, 4, 1114125, 0, 4, 1048580, 0, 4, 1048581, 0, 4, 1048582, 0, 4, 1048583, 0, 4, 1048584, 0, 4, 1048585, 0, 4, 1048586, 0, 4, 1048587, 0, 4, 1048588, 0, 4, 1048589, 0, 4, 65547, 1, 4, 65546, 0, 4, 65545, 0, 4, 65544, 0, 4, 65543, 0, 4, 65542, 0, 4, 65541, 0, 4, 65540, 0, 4, 65539, 0, 4, 65538, 0, 4, 65537, 0, 4, 131073, 0, 4, 131074, 0, 4, 131075, 0, 4, 131076, 0, 4, 131077, 0, 4, 131078, 0, 4, 131079, 0, 4, 131080, 0, 4, 131081, 0, 4, 131082, 1, 4, 131083, 1, 4, 196609, 0, 4, 196610, 0, 4, 196611, 0, 4, 196612, 0, 4, 196613, 0, 4, 196614, 0, 4, 196615, 0, 4, 196616, 0, 4, 196617, 1, 4, 196618, 1, 4, 196619, 1, 4, 262155, 1, 4, 262154, 1, 4, 262153, 1, 4, 262152, 0, 4, 262151, 0, 4, 262150, 0, 4, 262147, 0, 4, 262146, 0, 4, 262145, 0, 4, 327681, 0, 4, 393217, 0, 4, 327682, 0, 4, 327683, 0, 4, 327686, 0, 4, 327687, 0, 4, 327688, 0, 4, 327689, 0, 4, 327690, 0, 4, 327691, 0, 4, 393227, 0, 4, 393226, 0, 4, 393225, 0, 4, 393224, 0, 4, 393223, 0, 4, 393222, 0, 4, 393221, 0, 4, 393220, 0, 4, 393219, 0, 4, 393218, 0, 4, 458753, 0, 4, 458754, 0, 4, 458755, 0, 4, 458756, 0, 4, 458757, 0, 4, 458758, 0, 4, 458759, 0, 4, 458760, 0, 4, 458761, 0, 4, 458762, 0, 4, 458763, 0, 4, 524299, 0, 4, 524298, 0, 4, 524297, 0, 4, 524296, 0, 4, 524295, 0, 4, 524294, 0, 4, 524293, 0, 4, 524292, 0, 4, 524291, 0, 4, 524290, 0, 4, 524289, 0, 4, 589825, 0, 4, 589826, 0, 4, 589827, 0, 4, 589828, 0, 4, 589829, 0, 4, 589830, 0, 4, 589831, 0, 4, 589832, 196609, 5, 589833, 0, 4, 589834, 0, 4, 589835, 0, 4, 655371, 1376257, 7, 655370, 1376257, 7, 655369, 1376257, 7, 655368, 1376257, 7, 655367, 1376257, 7, 655366, 1376257, 7, 655365, 1376257, 7, 720901, 1376257, 7, 720902, 1376257, 7, 786439, 0, 4, 786440, 0, 4, 786441, 0, 4, 786442, 0, 4, 720906, 1376257, 7, 720907, 1376257, 7, 720905, 1376257, 7, 720904, 1376257, 7, 720903, 1376257, 7, 786438, 0, 4, 786437, 0, 4, 786436, 0, 4, 786435, 0, 4, 786434, 0, 4, 786433, 0, 4, 851969, 0, 4, 917505, 0, 4, 983041, 0, 4, 983042, 0, 4, 917506, 0, 4, 851970, 0, 4, 983043, 0, 4, 917507, 0, 4, 917508, 0, 4, 851971, 0, 4, 851972, 0, 4, 851973, 0, 4, 851974, 0, 4, 851975, 0, 4, 851976, 0, 4, 851977, 0, 4, 851978, 0, 4, 786443, 0, 4, 851979, 0, 4, 917511, 0, 4, 917510, 0, 4, 917509, 0, 4, 983045, 0, 4, 983044, 0, 4, 983046, 0, 4, 983047, 0, 4, 983048, 0, 4, 917512, 0, 4, 917513, 0, 4, 917514, 0, 4, 983050, 0, 4, 983049, 0, 4, 917515, 0, 4, 655361, 262145, 4, 655362, 262145, 4, 655363, 262145, 4, 655364, 262145, 4, 720896, 262145, 4, 720897, 262145, 4, 720898, 262145, 4, 720899, 262145, 4, 720900, 262145, 4, 720908, 1376257, 7, 655372, 262145, 4, 786445, 262145, 4, 720909, 262145, 4, 720910, 262145, 4, 786446, 262145, 4, 851982, 262145, 4, 786447, 262145, 4, 851983, 262145, 4, 917519, 262145, 4, 917520, 262145, 4, 851984, 262145, 4, 851985, 262145, 4, 917521, 262145, 4, 851987, 262145, 4, 917522, 262145, 4, 851986, 262145, 4, 917523, 262145, 4, 851988, 262145, 4, 917524, 262145, 4, 786452, 262145, 4, 720917, 262145, 4, 655382, 262145, 4, 589847, 262145, 4, 589848, 262145, 4, 524312, 262145, 4, 458777, 262145, 4, 393242, 262145, 4, 327707, 262145, 4, 917525, 262145, 4, 851989, 262145, 4, 786453, 262145, 4, 851990, 262145, 4, 786454, 262145, 4, 720918, 262145, 4, 655383, 262145, 4, 720919, 262145, 4, 786455, 262145, 4, 655384, 262145, 4, 720920, 262145, 4, 524313, 262145, 4, 589849, 262145, 4, 458778, 262145, 4, 524314, 262145, 4, 393243, 262145, 4, 458779, 262145, 4, 262148, 1114112, 7, 262149, 1179648, 7, 327684, 1114112, 8, 327685, 1179648, 8, 786444, 196609, 5, 655373, 196609, 5, 786449, 196609, 5, 589846, 196609, 5, 327706, 196609, 5, 589850, 196609, 5, 917526, 196609, 5, 983059, 196609, 5, 983051, 1, 4, 983052, 1, 4, 983053, 1, 4, 851980, 1, 4, 851981, 1, 4, 917517, 1, 4, 917516, 1, 4, 917518, 1, 4, 983054, 1, 4, 1048590, 1, 4, 1114126, 1, 4, 983055, 1, 4, 1048591, 1, 4, 1114127, 1, 4, 65548, 1, 4, 131084, 1, 4, 196620, 1, 4, 262156, 1, 4, 327692, 1, 4, 393228, 1, 4, 458764, 1, 4, 524300, 1, 4, 589836, 1, 4, 589837, 1, 4, 589838, 1, 4, 655374, 1, 4, 524302, 1, 4, 524301, 1, 4, 458765, 1, 4, 262157, 1, 4, 196621, 1, 4, 131085, 1, 4, 65549, 1, 4, 327693, 1, 4, 393229, 1, 4, 393230, 1, 4, 458766, 1, 4, 327694, 1, 4, 262158, 1, 4, 196622, 1, 4, 131086, 1, 4, 65550, 1, 4, 65551, 1, 4, 65552, 1, 4, 65553, 1, 4, 65554, 1, 4, 65555, 1, 4, 65556, 1, 4, 65557, 1, 4, 65558, 1, 4, 65559, 1, 4, 65560, 1, 4, 65561, 1, 4, 65562, 1, 4, 65563, 1, 4, 131099, 1, 4, 196635, 1, 4, 262171, 1, 4, 262170, 1, 4, 196634, 1, 4, 131098, 1, 4, 131097, 1, 4, 131096, 1, 4, 131095, 1, 4, 131094, 1, 4, 131093, 1, 4, 131092, 1, 4, 131091, 1, 4, 131090, 1, 4, 131089, 1, 4, 131088, 1, 4, 131087, 1, 4, 196623, 1, 4, 262159, 1, 4, 262160, 1, 4, 262161, 1, 4, 262162, 1, 4, 196625, 1, 4, 196624, 1, 4, 196626, 1, 4, 196627, 1, 4, 196628, 1, 4, 196629, 1, 4, 196630, 1, 4, 196631, 1, 4, 196632, 1, 4, 196633, 1, 4, 262169, 1, 4, 262168, 1, 4, 262167, 1, 4, 262166, 1, 4, 262165, 1, 4, 262164, 1, 4, 262163, 1, 4, 327699, 1, 4, 327698, 1, 4, 327697, 1, 4, 327696, 1, 4, 327695, 1, 4, 393231, 1, 4, 393232, 1, 4, 393233, 1, 4, 393234, 1, 4, 393235, 1, 4, 393236, 1, 4, 327700, 1, 4, 327701, 1, 4, 327705, 1, 4, 327704, 1, 4, 327703, 1, 4, 327702, 1, 4, 393238, 1, 4, 393237, 1, 4, 393239, 1, 4, 393240, 1, 4, 393241, 1, 4, 458776, 1, 4, 458775, 1, 4, 458774, 1, 4, 458773, 1, 4, 458772, 1, 4, 458771, 1, 4, 458770, 1, 4, 458769, 1, 4, 458768, 1, 4, 458767, 1, 4, 524303, 1, 4, 524304, 1, 4, 524305, 1, 4, 524306, 1, 4, 524307, 1, 4, 524308, 1, 4, 524309, 1, 4, 524310, 1, 4, 524311, 1, 4, 589845, 1, 4, 655381, 1, 4, 655380, 1, 4, 720916, 1, 4, 589844, 1, 4, 589843, 1, 4, 589842, 1, 4, 589841, 1, 4, 589840, 1, 4, 589839, 1, 4, 655375, 1, 4, 655376, 1, 4, 655377, 1, 4, 655378, 1, 4, 655379, 1, 4, 720915, 1, 4, 786451, 1, 4, 786450, 1, 4, 720914, 1, 4, 720913, 1, 4, 720912, 1, 4, 720911, 1, 4, 786448, 1, 4, 983056, 1, 4, 983057, 1, 4, 983058, 1, 4, 1048593, 1, 4, 1048592, 1, 4, 1048594, 1, 4, 1114128, 1, 4, 1114129, 1, 4, 1114130, 1, 4, 1114131, 1, 4, 1048595, 1, 4, 1048596, 1, 4, 983060, 1, 4, 983061, 1, 4, 983062, 1, 4, 1048598, 1, 4, 1048597, 1, 4, 1114132, 1, 4, 1114133, 1, 4, 1114134, 1, 4, 1114135, 1, 4, 1048599, 1, 4, 983063, 1, 4, 917527, 1, 4, 851991, 1, 4, 851992, 1, 4, 786456, 1, 4, 786457, 1, 4, 720921, 1, 4, 655385, 1, 4, 655386, 1, 4, 655387, 1, 4, 589851, 1, 4, 524315, 1, 4, 65564, 1, 4, 65565, 1, 4, 131101, 1, 4, 196637, 1, 4, 262173, 1, 4, 327709, 262145, 4, 393245, 262145, 4, 458781, 1, 4, 524317, 1, 4, 589853, 1, 4, 655389, 1, 4, 720925, 1, 4, 786461, 1, 4, 851997, 1, 4, 917533, 1, 4, 983069, 1, 4, 1048605, 1, 4, 1048604, 1, 4, 983068, 1, 4, 917532, 1, 4, 851996, 1, 4, 786460, 1, 4, 720924, 1, 4, 655388, 1, 4, 589852, 1, 4, 524316, 1, 4, 458780, 1, 4, 393244, 262145, 4, 327708, 262145, 4, 262172, 1, 4, 196636, 1, 4, 131100, 1, 4, 720922, 1, 4, 720923, 1, 4, 786458, 1, 4, 851993, 1, 4, 851994, 1, 4, 851995, 1, 4, 917531, 1, 4, 917530, 1, 4, 917529, 1, 4, 917528, 1, 4, 983064, 1, 4, 983065, 1, 4, 983066, 1, 4, 983067, 1, 4, 1048603, 1, 4, 1048602, 1, 4, 1048601, 1, 4, 1048600, 1, 4, 1114136, 1, 4, 1114137, 1, 4, 1114138, 1, 4, 1114139, 1, 4, 1114140, 1, 4, 1114141, 1, 4, 65535, 0, 4, 65534, 0, 4, 65533, 0, 4, 65532, 0, 4, 131068, 0, 4, 196604, 0, 4, 262140, 0, 4, 327676, 0, 4, 393212, 0, 4, 458748, 0, 4, 458749, 0, 4, 393213, 0, 4, 393214, 0, 4, 393215, 0, 4, 327679, 0, 4, 262143, 0, 4, 196607, 0, 4, 131071, 0, 4, 131070, 0, 4, 131069, 0, 4, 196605, 0, 4, 196606, 0, 4, 262142, 0, 4, 327678, 0, 4, 327677, 0, 4, 262141, 0, 4, 524285, 0, 4, 524284, 0, 4, 589820, 0, 4, 655356, 0, 4, 720892, 0, 4, 786428, 0, 4, 851964, 0, 4, 917500, 0, 4, 917501, 0, 4, 851965, 0, 4, 786429, 0, 4, 720893, 0, 4, 655357, 0, 4, 589821, 0, 4, 589822, 0, 4, 524286, 0, 4, 458750, 0, 4, 655358, 0, 4, 720894, 262145, 4, 917502, 0, 4, 851966, 0, 4, 786430, 262145, 4, 917503, 0, 4, 983039, 0, 4, 851967, 0, 4, 786431, 262145, 4, 720895, 262145, 4, 655359, 0, 4, 589823, 0, 4, 524287, 0, 4, 458751, 0, 4, 983037, 0, 4, 983036, 0, 4, 983038, 0, 4, 1048575, 0, 4, 1114111, 0, 4, 1179647, 0, 4, 1179646, 0, 4, 1179645, 0, 4, 1179644, 0, 4, 1114108, 0, 4, 1048572, 0, 4, 1048573, 0, 4, 1048574, 0, 4, 1114110, 0, 4, 1114109, 0, 4, 327710, 262145, 4, 327711, 262145, 4, 393247, 262145, 4, 393246, 262145, 4, 30, 1, 4, 31, 1, 4, 65566, 1, 4, 65567, 1, 4, 131103, 1, 4, 131102, 1, 4, 196638, 1, 4, 196639, 1, 4, 262175, 1, 4, 262174, 1, 4, 458782, 1, 4, 458783, 1, 4, 524318, 1, 4, 524319, 1, 4, 589854, 1, 4, 589855, 1, 4, 655391, 1, 4, 655390, 1, 4, 720926, 1, 4, 720927, 1, 4, 786462, 1, 4, 786459, 1, 4, 786463, 1, 4, 851999, 1, 4, 851998, 1, 4, 917534, 1, 4, 917535, 1, 4, 983071, 1, 4, 983070, 1, 4, 1048606, 1, 4, 1048607, 1, 4, 1114143, 1, 4, 1114142, 1, 4)
layer_1/name = "fences"
layer_1/tile_data = PackedInt32Array(393219, 65538, 2, 393220, 131074, 3, 393221, 131074, 3, 393222, 196610, 2, 262150, 2, 1, 196614, 196610, 0, 327683, 2, 1, 262147, 2, 1, 196611, 65538, 0, 196612, 131074, 3, 196613, 131074, 3, 327686, 2, 1)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(983041, 0, 0, 917513, 0, 0, 524293, 131072, 2, 393225, 131072, 2, 327681, 0, 0, 65545, 262144, 0, 2, 262144, 0, 851971, 262145, 2, 524300, 262145, 2, 196622, 1, 0, 65562, 1, 0, 327699, 1, 0, 589840, 131073, 2, 196629, 131073, 2, 196619, 131073, 2, 327704, 262145, 2, 524308, 262145, 2, 983065, 262145, 2, 655388, 262145, 2, 1048592, 262145, 2, 983062, 1, 0, 720922, 1, 0, 65553, 262145, 2, 393230, 262144, 0, 131095, 262144, 0, 1048595, 262144, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-2, 1, -1, 159, -45, 159, -45, 191, -1, 190, -1, 289, 481, 288, 479, 110, 516, 110, 515, 77, 480, 80, 479, -2, 4, -1, 145, -15, 231, -12, 336, -15, 469, -12, 511, -1, 534, 47, 537, 111, 529, 196, 525, 283, 517, 313, 401, 321, -15, 300, -86, 186, -40, 111, -14, 38)

[node name="portal to world" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal to world"]
position = Vector2(-21, 175.5)
shape = SubResource("RectangleShape2D_xir27")

[node name="CanvasModulate" parent="." instance=ExtResource("4_buiv0")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DayNightCycleUI" parent="CanvasLayer" instance=ExtResource("5_gl88k")]
anchor_right = 0.039
anchor_bottom = 0.038
offset_right = -0.880005
offset_bottom = -0.0400009
scale = Vector2(2, 2)

[node name="Hotbar" parent="CanvasLayer" instance=ExtResource("5_pwclt")]
offset_left = -5.0
offset_top = 89.0
offset_right = 135.0
offset_bottom = 129.0
scale = Vector2(1.5, 1.5)

[node name="grass_to_snow to snowmap" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass_to_snow to snowmap"]
position = Vector2(497.25, 94)
shape = SubResource("RectangleShape2D_1ui7n")

[node name="player" parent="." instance=ExtResource("3_skscc")]
position = Vector2(14, 178)

[node name="Nightborne" parent="." instance=ExtResource("7_ou7wi")]
position = Vector2(221, 202)

[node name="Nightborne2" parent="." instance=ExtResource("7_ou7wi")]
position = Vector2(269, 106)

[node name="Nightborne3" parent="." instance=ExtResource("7_ou7wi")]
position = Vector2(393, 204)

[connection signal="body_entered" from="portal to world" to="." method="_on_portal_to_world_body_entered"]
[connection signal="body_exited" from="portal to world" to="." method="_on_portal_to_world_body_exited"]
[connection signal="body_entered" from="grass_to_snow to snowmap" to="." method="_on_grass_to_snow_to_snowmap_body_entered"]
